new elements added

--- a/gloss/if-else-elif.py.ipynb
+++ b/gloss/if-else-elif.py.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
    ],
    "source": [
     "var = 19\n",
-    "e = var < 10 # True\n",
+    "e = var < 10 # False\n",
     "if e:\n",
     "    print(\"var < 10:\", e)\n",
     "else:\n",
@@ -34,20 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "var < 10: True\n",
-      "var:  9\n"
+      "var >= 10 False\n",
+      "var:  12\n"
      ]
     }
    ],
    "source": [
-    "var = 9\n",
+    "var = 12\n",
     "e1 = var < 10 # True\n",
     "e2 = (var % 2) == 0  # False\n",
     "if e1:\n",
