if else elif map filter

--- a/gloss/if-else-elif.py.ipynb
+++ b/gloss/if-else-elif.py.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "var >= 10: False\n",
-      "var:  19\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var = 19\n",
     "e = var < 10 # False\n",
@@ -34,22 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "var >= 10 False\n",
-      "var:  12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var = 12\n",
-    "e1 = var < 10 # True\n",
+    "e1 = var < 10 # False\n",
     "e2 = (var % 2) == 0  # False\n",
+    "\n",
+    "## Bad use of elif not having\n",
+    "## disjunctive conditions\n",
     "if e1:\n",
     "    print(\"var < 10:\", e1)\n",
     "elif not e1: # else if\n",
@@ -58,8 +43,16 @@
     "    print(\"(var % 2) == 0\", e2)\n",
     "else:\n",
     "    print(\"---------\")\n",
+    "    \n",
+    "print(\"var: \", var)\n",
     "\n",
-    "print(\"var: \", var)"
+    "## Better use\n",
+    "if var < 1:\n",
+    "    print(\"var < 1\")\n",
+    "elif var < 5:\n",
+    "    print(\"1 <= var < 5\")\n",
+    "else:\n",
+    "    print(\"var >= 5\")\n"
    ]
   },
   {
